Added in config for SlideShare
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3136 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -21,6 +21,13 @@ all:
       # You can remove this line (P'unks, DO NOT indent this line):
 <?php if (file_exists(dirname(__FILE__) . '/punk-demo-viddler.yml')) require dirname(__FILE__) . '/punk-demo-viddler.yml' ?>
       # Uncomment these and plug in your information after you get your key from viddler
+    slideshare:
+      # We use this to bring in our own slideshare key, you need to go get your own
+      # You can remove this line (P'unks, DO NOT indent this line):
+<?php if (file_exists(dirname(__FILE__) . '/punk-demo-slideshare.yml')) require dirname(__FILE__) . '/punk-demo-slideshare.yml' ?>
+      # Uncomment these and plug in your information after you get your key from slideshare
+      # apiKey: your_key_from_slideshare
+      # sharedSecret: your_secret_from_slideshare
 
     # includes apostrophe css into the project
     use_bundled_stylesheet: true
