--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -22,12 +22,19 @@ all:
 <?php if (file_exists(dirname(__FILE__) . '/punk-demo-viddler.yml')) require dirname(__FILE__) . '/punk-demo-viddler.yml' ?>
       # Uncomment these and plug in your information after you get your key from viddler
     slideshare:
-      # We use this to bring in our own slideshare key, you need to go get your own
+      # We use this to bring in our own SlideShare key, you need to go get your own
       # You can remove this line (P'unks, DO NOT indent this line):
 <?php if (file_exists(dirname(__FILE__) . '/punk-demo-slideshare.yml')) require dirname(__FILE__) . '/punk-demo-slideshare.yml' ?>
-      # Uncomment these and plug in your information after you get your key from slideshare
+      # Uncomment these and plug in your information after you get your key from SlideShare
       # apiKey: your_key_from_slideshare
       # sharedSecret: your_secret_from_slideshare
+    soundcloud:
+      # We use this to bring in our own SoundCloud key, you need to go get your own
+      # You can remove this line (P'unks, DO NOT indent this line):
+<?php if (file_exists(dirname(__FILE__) . '/punk-demo-soundclous.yml')) require dirname(__FILE__) . '/punk-demo-soundcloud.yml' ?>
+      # Uncomment these and plug in your information after you get your key from SoundCloud
+      # consumerKey: your_key_from_soundcloud
+      # consumerSecret: your_secret_from_soundcloud
 
     # includes apostrophe css into the project
     use_bundled_stylesheet: true
