doctrine:clean successfully completed. We still had rather a lot of form and filter classes for types that don't need them (fixes #430)
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3182 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -10,7 +10,7 @@ default:
     #robots:       index, follow
 
   stylesheets:    
-    - main.css: { position: last }
+    - main.css: { position: last, media: all }
   
   javascripts:
     - site.js: { position: last }
