* Turn on minify_gzip by default in production. If you don't have the gzip extension or your Apache is not configured to recognize .cssgz and .jsgz files, you can disable it, but we want to show Apostrophe off with its full performance in production
* Reverted view.yml settings to normal



git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3204 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -6,7 +6,7 @@ all:
     # (Apostrophe comes with a more convenient set)
     routes_register: false
   a:
-    
+
     pager_nb_links: 5
     
     vimeo:
@@ -309,8 +309,7 @@ all:
 prod:
   a:
     minify: true
-    # Disabled gzip for now to avoid problems for people who
-    # don't have the zlib extension or haven't set up Apache to
-    # know what to do with the gzipped files
-    minify_gzip: false
+    # If you don't have the gzip extension in PHP or you don't have Apache configured
+    # to cope with gzipped files, just set this false
+    minify_gzip: true
   
