added option for disqus developer mode
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3239 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -252,7 +252,10 @@ all:
     # Disqus Comments
     # Once you have a Disqus account, enable comments and put in your Disqus shortname
     # disqus_enabled: true
-    # disqus_shortname: yourshortnamehere
+    # disqus_shortname: yourdisqusshortname
+
+    # enable this if you are developing locally to see comments
+    # disqus_developer: true
       
   aToolkit:
     indexes:
