* Added aBlog.js to view.yml so blog post and event slots work; will document this requirement * Removed deprecated single-image and single-blog-post slots from default template
git-svn-id: http://svn.apostrophenow.org/sandboxes/asandbox/branches/1.5@3250 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -13,6 +13,8 @@ default:
     - main.css: { position: last }
   
   javascripts:
+    # Required for blog slots
+    - /apostropheBlogPlugin/js/aBlog.js
     - site.js: { position: last }
 
   has_layout:     true
